// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPIGenerator > snapshot tests > snapshot: discriminated union response 1`] = `
{
  "components": {
    "schemas": {
      "ErrorResponse": {
        "properties": {
          "message": {
            "type": "string",
          },
          "status": {
            "const": "error",
          },
        },
        "required": [
          "status",
        ],
        "type": "object",
      },
      "SuccessResponse": {
        "properties": {
          "data": {
            "type": "object",
          },
          "status": {
            "const": "success",
          },
        },
        "required": [
          "status",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "title": "Union API",
    "version": "1.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/result": {
      "get": {
        "operationId": "getResult",
        "parameters": [],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "discriminator": {
                    "propertyName": "status",
                  },
                  "oneOf": [
                    {
                      "$ref": "#/components/schemas/SuccessResponse",
                    },
                    {
                      "$ref": "#/components/schemas/ErrorResponse",
                    },
                  ],
                },
              },
            },
            "description": "OK",
          },
        },
        "tags": [
          "results",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "/api",
    },
  ],
  "tags": [
    {
      "name": "results",
    },
  ],
}
`;

exports[`OpenAPIGenerator > snapshot tests > snapshot: middleware headers in spec 1`] = `
{
  "components": {
    "schemas": {},
  },
  "info": {
    "title": "Auth API",
    "version": "1.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/users": {
      "get": {
        "operationId": "user_list",
        "parameters": [
          {
            "in": "header",
            "name": "authorization",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
          {
            "in": "header",
            "name": "x-request-id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "description": "OK",
          },
        },
        "tags": [
          "users",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "/api",
    },
  ],
  "tags": [
    {
      "name": "users",
    },
  ],
}
`;

exports[`OpenAPIGenerator > snapshot tests > snapshot: minimal single-route API 1`] = `
{
  "components": {
    "schemas": {},
  },
  "info": {
    "title": "Test API",
    "version": "1.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/users/{id}": {
      "get": {
        "operationId": "user_getById",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "format": "uuid",
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "OK",
          },
        },
        "tags": [
          "users",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "/api",
    },
  ],
  "tags": [
    {
      "name": "users",
    },
  ],
}
`;

exports[`OpenAPIGenerator > snapshot tests > snapshot: multi-module CRUD API 1`] = `
{
  "components": {
    "schemas": {
      "CreateUserBody": {
        "properties": {
          "email": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
        },
        "required": [
          "name",
          "email",
        ],
        "type": "object",
      },
      "ReadUserResponse": {
        "properties": {
          "id": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "info": {
    "title": "CRUD API",
    "version": "2.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/users": {
      "get": {
        "operationId": "user_list",
        "parameters": [],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ReadUserResponse",
                },
              },
            },
            "description": "OK",
          },
        },
        "tags": [
          "users",
        ],
      },
      "post": {
        "operationId": "user_create",
        "parameters": [],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/CreateUserBody",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "201": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ReadUserResponse",
                },
              },
            },
            "description": "OK",
          },
        },
        "tags": [
          "users",
        ],
      },
    },
    "/users/{id}": {
      "delete": {
        "operationId": "user_delete",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "204": {
            "description": "No Content",
          },
        },
        "tags": [
          "users",
        ],
      },
      "get": {
        "operationId": "user_getById",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ReadUserResponse",
                },
              },
            },
            "description": "OK",
          },
        },
        "tags": [
          "users",
        ],
      },
      "put": {
        "operationId": "user_update",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/CreateUserBody",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ReadUserResponse",
                },
              },
            },
            "description": "OK",
          },
        },
        "tags": [
          "users",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "/api",
    },
  ],
  "tags": [
    {
      "name": "users",
    },
  ],
}
`;

exports[`OpenAPIGenerator snapshot tests snapshot: minimal single-route API 1`] = `
{
  "components": {
    "schemas": {},
  },
  "info": {
    "title": "Test API",
    "version": "1.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/users/{id}": {
      "get": {
        "operationId": "user_getById",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "format": "uuid",
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "OK",
          },
        },
        "tags": [
          "users",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "/api",
    },
  ],
  "tags": [
    {
      "name": "users",
    },
  ],
}
`;

exports[`OpenAPIGenerator snapshot tests snapshot: multi-module CRUD API 1`] = `
{
  "components": {
    "schemas": {
      "CreateUserBody": {
        "properties": {
          "email": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
        },
        "required": [
          "name",
          "email",
        ],
        "type": "object",
      },
      "ReadUserResponse": {
        "properties": {
          "id": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "info": {
    "title": "CRUD API",
    "version": "2.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/users": {
      "get": {
        "operationId": "user_list",
        "parameters": [],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ReadUserResponse",
                },
              },
            },
            "description": "OK",
          },
        },
        "tags": [
          "users",
        ],
      },
      "post": {
        "operationId": "user_create",
        "parameters": [],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/CreateUserBody",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "201": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ReadUserResponse",
                },
              },
            },
            "description": "OK",
          },
        },
        "tags": [
          "users",
        ],
      },
    },
    "/users/{id}": {
      "delete": {
        "operationId": "user_delete",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "204": {
            "description": "No Content",
          },
        },
        "tags": [
          "users",
        ],
      },
      "get": {
        "operationId": "user_getById",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ReadUserResponse",
                },
              },
            },
            "description": "OK",
          },
        },
        "tags": [
          "users",
        ],
      },
      "put": {
        "operationId": "user_update",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/CreateUserBody",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ReadUserResponse",
                },
              },
            },
            "description": "OK",
          },
        },
        "tags": [
          "users",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "/api",
    },
  ],
  "tags": [
    {
      "name": "users",
    },
  ],
}
`;

exports[`OpenAPIGenerator snapshot tests snapshot: middleware headers in spec 1`] = `
{
  "components": {
    "schemas": {},
  },
  "info": {
    "title": "Auth API",
    "version": "1.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/users": {
      "get": {
        "operationId": "user_list",
        "parameters": [
          {
            "in": "header",
            "name": "authorization",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
          {
            "in": "header",
            "name": "x-request-id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "description": "OK",
          },
        },
        "tags": [
          "users",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "/api",
    },
  ],
  "tags": [
    {
      "name": "users",
    },
  ],
}
`;

exports[`OpenAPIGenerator snapshot tests snapshot: discriminated union response 1`] = `
{
  "components": {
    "schemas": {
      "ErrorResponse": {
        "properties": {
          "message": {
            "type": "string",
          },
          "status": {
            "const": "error",
          },
        },
        "required": [
          "status",
        ],
        "type": "object",
      },
      "SuccessResponse": {
        "properties": {
          "data": {
            "type": "object",
          },
          "status": {
            "const": "success",
          },
        },
        "required": [
          "status",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "title": "Union API",
    "version": "1.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/result": {
      "get": {
        "operationId": "getResult",
        "parameters": [],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "discriminator": {
                    "propertyName": "status",
                  },
                  "oneOf": [
                    {
                      "$ref": "#/components/schemas/SuccessResponse",
                    },
                    {
                      "$ref": "#/components/schemas/ErrorResponse",
                    },
                  ],
                },
              },
            },
            "description": "OK",
          },
        },
        "tags": [
          "results",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "/api",
    },
  ],
  "tags": [
    {
      "name": "results",
    },
  ],
}
`;
